--- a/my-os/install
+++ b/my-os/install
@@ -115,10 +115,27 @@ echo "Creating xmonad directories"
 mkdir "$HOME"/.local/share/xmonad
 mkdir "$HOME"/.cache/xmonad
 
+# echo "Installing plug and relevant packages for vim"
+# sh -c 'curl -flo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs \
+#   https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
+
+# sudo pip install pynvim
+
 echo "-----------------------------------------------------------"
 echo "Starting services"
 echo "-----------------------------------------------------------"
 
+# sudo rc-update add alsasound
+
 echo "-----------------------------------------------------------"
-echo "Remeber to set up ssh, there are things you have to manually"
+echo "Cleaning up ~/"
 echo "-----------------------------------------------------------"
+
+# echo "-----------------------------------------------------------"
+# echo "Remeber to set up ssh, there are things you have to manually"
+# echo "-----------------------------------------------------------"
+echo "-----------------------------------------------------------"
+echo "Things you should remember"
+echo "-----------------------------------------------------------"
+echo "- Intall plugins in nvim with: :PlugInstall"
+echo "- Setup ssh with github"
