Changed mkdir .local to mkdir -p .local/share

--- a/my-os/install
+++ b/my-os/install
@@ -22,7 +22,7 @@ echo "-----------------------------------------------------------"
 echo "Creating basic directories"
 echo "-----------------------------------------------------------"
 
-# mkdir $HOME/.local
+mkdir -p $HOME/.local/share
 # mkdir $HOME/.config
 # mkdir $HOME/.cache
 mkdir $HOME/docs
